2.5.0 (2017-XX-XX)
  * Made 'scala' function return NULL and provide the interpreter as a side
    effect.  This lowers the perceived delay in instantiating and first-use of
    a Scala interpreter.  Added 'scala2' and 'scala3' functions to customize
    how the Scala/R bridge is established.  Users should change instances of
    's <- scala()' to 'scala()' or 's <- scala3()'.
  * Added 'scalaFunctionArgs' function to customize the arguments passed to
    Scala functions.
  * Caching of methods calls from difference instances of Scala references for
    faster invocation.

2.4.0 (2017-09-27)
  * Improved input/output performance for large transfers over TCP/IP bridge.
  * Substantially lower protocol overhead when calling Scala methods (e.g.,
    's$scala.util.Random$nextGaussian()') and Scala
    functions (e.g., function(x) s %!% '2+x').
  * Scala functions no longer require default arguments and type signatures are
    now inferred by argument values (instead of being inferred from the default
    arguments).
  * Fixed broken temperature web app in vignette by replacing defunct
    'weatherData' package with 'darksky' package.

2.3.5 (2017-08-30)
  * Quote 'Scala' and 'R' in title and description as per CRAN request.

2.3.4 (2017-08-29)
  * Fixed issue with vignette building on Windows.

2.3.3 (2017-08-28)
  * Make vignette robust to missing microbenchmark package.
  * Make vignette avoid Scala's compiler daemon.

2.3.2 (2017-08-25)
  * Bug fix for depending packages on some platforms.
  * Tweeks to vignette build process to make it more robust.

2.3.1 (2017-08-21)
  * Version associated with resubmission of paper to Journal of Statistical
    Software.
  * If a requested version of Scala does not exits, offer to install it if
    R is interactive.
  * By default, set serialize.output to TRUE on Windows and FALSE otherwise
    so that Windows users also see stack traces and output be default.
  * Added rudimentary support for tab completion for methods on Scala