@@ -12,7 +12,6 @@ export("strintrplt")
 export("scalaInstall")
 export("scalaSettings")
 export("scalaInfo")
-export("scalaFunctionArgs")
 export("scalaNull")
 export("II")
 # export("scalap")
